chore: fix overflow

--- a/home-assist/src/app/point-list/point-list.component.css
+++ b/home-assist/src/app/point-list/point-list.component.css
@@ -9,5 +9,5 @@
   
   .mat-card-content {
     flex-grow: 1;
-    overflow: auto;
+    overflow: hidden;
   }
